# nextjs-fastapi-boilerplate

./: .gitignore  README.md  package-lock.json  package.json
backend/: .flake8  README.md  package.json  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: debug.py
backend/app/core/: config.py
frontend/: .eslintrc.js  next.config.js  package-lock.json  package.json  tsconfig.json
